--- a/.github/workflows/openwrt-builder.yml
+++ b/.github/workflows/openwrt-builder.yml
@@ -24,11 +24,11 @@ on:
       repository_owner:
         description: '仓库所有人'
         required: false
-        default: 'immortalwrt'
+        default: 'openwrt'
       repository_name:
         description: '仓库名'
         required: false
-        default: 'immortalwrt'
+        default: 'openwrt'
       repository_branch:
         description: '分支'
         required: false
@@ -44,8 +44,8 @@ jobs:
     runs-on: ubuntu-latest
 
     env:
-      REPO_URL: "https://github.com/${{ github.event.inputs.repository_owner || github.event.client_payload.repository_owner }}/${{ github.event.inputs.repository_name || github.event.client_payload.repository_name }}"
-      REPO_BRANCH: ${{ github.event.inputs.repository_branch || github.event.client_payload.repository_branch }}
+      REPO_URL: "https://github.com/openwrt/openwrt.git"
+      REPO_BRANCH: openwrt-24.10
       FEEDS_CONF: feeds.conf.default
       CONFIG_FILE: .config
       DIY_P1_SH: diy-part1.sh
@@ -53,7 +53,7 @@ jobs:
       UPLOAD_BIN_DIR: false
       UPLOAD_FIRMWARE: true
       UPLOAD_RELEASE: true
-      OPENWRT_NAME: immortalwrt
+      OPENWRT_NAME: openwrt
       OPENWRT_NAME1: x86_64
       TZ: Asia/Shanghai
 
@@ -157,7 +157,7 @@ jobs:
         if: env.UPLOAD_FIRMWARE == 'true' && !cancelled()
         run: |
           cd openwrt/bin/targets/*/*
-          rm -rf packages *rootfs.tar.gz *rootfs.img.gz *combined.img.gz *.bin *.config *.buildinfo *.json sha256sums *.manifest *rootfs.img
+          #rm -rf packages *rootfs.tar.gz *rootfs.img.gz *combined.img.gz *.bin *.config *.buildinfo *.json sha256sums *.manifest *rootfs.img
           echo "FIRMWARE=$PWD" >> $GITHUB_ENV
           echo "status=success" >> $GITHUB_OUTPUT
 
