--- a/.config
+++ b/.config
@@ -8219,3 +8219,21 @@ CONFIG_PACKAGE_yq=y
 # CONFIG_PACKAGE_fontconfig is not set
 # end of Font-Utils
 # end of Xorg
+
+# [systools]
+CONFIG_PACKAGE_speedtestcli=y
+CONFIG_PACKAGE_luci-app-systools=y
+CONFIG_PACKAGE_luci-i18n-systools-zh-cn=y
+
+# [fastnet]
+CONFIG_PACKAGE_fastnet=y
+CONFIG_PACKAGE_luci-app-fastnet=y
+CONFIG_PACKAGE_luci-i18n-fastnet-zh-cn=y
+
+# [poweroff]
+CONFIG_PACKAGE_luci-i18n-poweroff-zh-cn=y
+
+# [gowebdav]
+CONFIG_PACKAGE_gowebdav=y
+CONFIG_PACKAGE_luci-app-gowebdav=y
+CONFIG_PACKAGE_luci-i18n-gowebdav-zh-cn=y
