--- a/.config
+++ b/.config
@@ -8237,3 +8237,8 @@ CONFIG_PACKAGE_luci-i18n-poweroff-zh-cn=y
 CONFIG_PACKAGE_gowebdav=y
 CONFIG_PACKAGE_luci-app-gowebdav=y
 CONFIG_PACKAGE_luci-i18n-gowebdav-zh-cn=y
+
+# [npc]
+CONFIG_PACKAGE_npc=y
+CONFIG_PACKAGE_luci-app-npc=y
+CONFIG_PACKAGE_luci-i18n-npc-zh-cn=y
