--- a/.config
+++ b/.config
@@ -6075,7 +6075,7 @@ CONFIG_PACKAGE_aria2-openssl=y
 # CONFIG_PACKAGE_atftpd is not set
 # CONFIG_PACKAGE_croc is not set
 CONFIG_PACKAGE_curl=y
-CONFIG_PACKAGE_gowebdav=y
+# CONFIG_PACKAGE_gowebdav is not set
 # CONFIG_GOWEBDAV_COMPRESS_GOPROXY is not set
 CONFIG_GOWEBDAV_COMPRESS_UPX=y
 # CONFIG_PACKAGE_lftp is not set
